Changed from Paths.get to Path.of
Signed-off-by: Luktronic <luktronic@gmx.at>